[gd_scene load_steps=9 format=2]

[ext_resource path="res://Keqing.tscn" type="PackedScene" id=1]
[ext_resource path="res://Area.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ganyu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ganqing.gd" type="Script" id=4]
[ext_resource path="res://Keyu.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Appearing"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fading"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="Ganqing" type="Node2D"]
script = ExtResource( 4 )

[node name="Keqing" parent="." instance=ExtResource( 1 )]
position = Vector2( 861, 313 )

[node name="Ganyu" parent="." instance=ExtResource( 3 )]
position = Vector2( 153, 122 )

[node name="Keyu" parent="." instance=ExtResource( 5 )]
position = Vector2( 159, 455 )

[node name="Area" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "Appearing"
anims/Appearing = SubResource( 1 )
anims/Fading = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="stop" from="." to="Keyu" method="_on_Ganqing_stop"]
[connection signal="Ganqing" from="Ganyu" to="." method="_on_Ganyu_Ganqing"]
[connection signal="Keyu" from="Keyu" to="." method="_on_Keyu_Keyu"]
[connection signal="Keyu" from="Keyu" to="Keqing" method="_on_Keyu_Keyu"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
